<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/particularsDisplayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/particulars_display_text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="25dp"
        android:textStyle="bold"
        android:textSize="17dp"/>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/particularsDisplayText"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="Full Name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/user_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/user_name"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="Phone Number with Country Code"
        android:inputType="text|phone"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/user_country"
        android:layout_below="@+id/user_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="Country"
        android:inputType="text"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/user_email"
        android:layout_below="@+id/user_country"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/submit_particulars_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="submit" />

</RelativeLayout>