<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/paypal"
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:layout_centerInParent="true"
        android:src="@drawable/paypal_logo" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paypal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="Welcome"
        android:textSize="20dp"
        android:textStyle="bold" />

</RelativeLayout>