<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/userlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@color/white"
        android:src="@drawable/user_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userlogin"
        android:layout_centerHorizontal="true"
        android:text="User Login"
        android:textSize="20dp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@id/adminlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userlogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:src="@drawable/admin_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adminlogin"
        android:layout_centerHorizontal="true"
        android:text="Admin Login"
        android:textSize="20dp"
        android:textStyle="bold" />

</RelativeLayout>